[package]
name = "mqtt2db-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "0.11.1"
clap = { version = "3.2.6", features = ["derive"] }
futures = "0.3"
redis = { version = "0.21.5", features = ["async-std-comp"]}
async-std = "1.12.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"